feat : add intelligence

--- a/frontend/src/app/components/ocr/ocr.component.html
+++ b/frontend/src/app/components/ocr/ocr.component.html
@@ -23,3 +23,8 @@
   <h3>📝 Extracted Text:</h3>
   <pre>{{ extractedText }}</pre>
 </div>
+
+<app-ocr-result
+  [text]="extractedText"
+  [structured]="structuredData"
+></app-ocr-result>
